releases/satabs-3.2/src/bplang/y.output
Terminals unused in grammar

   "thread_local"
   EQUIV_Token


Grammar

    0 $accept: start $end

    1 start: declarations

    2 declarations: declaration
    3             | declarations declaration

    4 declaration: variable_declaration ';'
    5            | function_definition

    6 variable_declaration: "decl" variable_list

    7 variable_list: variable_name
    8              | variable_list ',' variable_name

    9 expression_list: expression
   10                | expression_list ',' expression

   11 variable_list_opt: /* empty */
   12                  | variable_list

   13 expression_list_opt: /* empty */
   14                    | expression_list

   15 argument_list: '(' variable_list_opt ')'

   16 type: "void"
   17     | "bool"
   18     | "bool" '<' NUMBER_Token '>'

   19 $@1: /* empty */

   20 $@2: /* empty */

   21 function_definition: dfs_opt type function_name $@1 argument_list function_body $@2

   22 dfs_opt: /* empty */
   23        | "dfs"

   24 function_body: block_statement

   25 block_statement: "begin" statement_list "end"

   26 statement_list: /* empty */
   27               | statement_list_rec ';'
   28               | statement_list_rec

   29 statement_list_rec: statement_list_rec ';' statement
   30                   | statement

   31 if_statement: "if" expression "then" statement_list "fi"
   32             | "if" expression "then" statement_list elsif_list "fi"

   33 elsif_list: "else" statement_list
   34           | "elsif" expression "then" statement_list elsif_list
   35           | "elsif" expression "then" statement_list

   36 while_statement: "while" expression "do" statement_list "od"

   37 goto_statement: "goto" label_list

   38 label_list: label
   39           | label_list ',' label

   40 function_call: function_name '(' expression_list_opt ')'

   41 function_call_statement: function_call

   42 return_statement: "return" expression_list
   43                 | "return"

   44 enforce_statement: "enforce" expression

   45 skip_statement: "skip"

   46 abortif_statement: "abortif" expression

   47 start_thread_statement: "start_thread" statement

   48 end_thread_statement: "end_thread"

   49 sync_statement: "sync" IDENTIFIER_Token

   50 atomic_begin_statement: "atomic_begin"

   51 atomic_end_statement: "atomic_end"

   52 dead_statement: "dead" expression_list

   53 statement: enforce_statement
   54          | abortif_statement
   55          | skip_statement
   56          | dead_statement
   57          | goto_statement
   58          | function_call_statement
   59          | return_statement
   60          | while_statement
   61          | if_statement
   62          | labeled_statement
   63          | assignment_statement
   64          | decl_statement
   65          | start_thread_statement
   66          | end_thread_statement
   67          | sync_statement
   68          | atomic_begin_statement
   69          | atomic_end_statement

   70 decl_statement: variable_declaration

   71 constrain_opt: /* empty */
   72              | constrain

   73 constrain: "constrain" expression

   74 assignment_statement: expression_list ":=" expression_list constrain_opt
   75                     | expression_list ":=" function_call

   76 labeled_statement: label ':' statement

   77 label: IDENTIFIER_Token

   78 function_name: IDENTIFIER_Token

   79 variable_name: IDENTIFIER_Token

   80 expression: unary_expression
   81           | expression IMPLIES_Token expression
   82           | expression AND_Token expression
   83           | expression OR_Token expression
   84           | expression XOR_Token expression
   85           | expression "=" expression
   86           | expression "!=" expression

   87 primary_expression: '(' expression ')'
   88                   | '*'
   89                   | variable_name
   90                   | "schoose" '[' expression_list ']'
   91                   | NUMBER_Token

   92 unary_expression: primary_expression
   93                 | '!' unary_expression
   94                 | '~' unary_expression
   95                 | TICK_Token unary_expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 93
'(' (40) 15 40 87
')' (41) 15 40 87
'*' (42) 88
',' (44) 8 10 39
':' (58) 76
';' (59) 4 27 29
'<' (60) 18
'>' (62) 18
'[' (91) 90
']' (93) 90
'~' (126) 94
error (256)
"begin" (258) 25
"end" (259) 25
"decl" (260) 6
"void" (261) 16
"bool" (262) 17 18
"goto" (263) 37
"enforce" (264) 44
"if" (265) 31 32
"then" (266) 31 32 34 35
"else" (267) 33
"elsif" (268) 34 35
"fi" (269) 31 32
"skip" (270) 45
"while" (271) 36
"do" (272) 36
"od" (273) 36
"abortif" (274) 46
"start_thread" (275) 47
"end_thread" (276) 48
"thread_local" (277)
"sync" (278) 49
"atomic_begin" (279) 50
"atomic_end" (280) 51
"dead" (281) 52
"return" (282) 42 43
"schoose" (283) 90
IDENTIFIER_Token (284) 49 77 78 79
NUMBER_Token (285) 18 91
"dfs" (286) 23
":=" (287) 74 75
"constrain" (288) 73
"!=" (289) 86
"=" (290) 85
IMPLIES_Token (291) 81
EQUIV_Token (292)
XOR_Token (293) 84
OR_Token (294) 83
AND_Token (295) 82
TICK_Token (296) 95


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
start (55)
    on left: 1, on right: 0
declarations (56)
    on left: 2 3, on right: 1 3
declaration (57)
    on left: 4 5, on right: 2 3
variable_declaration (58)
    on left: 6, on right: 4 70
variable_list (59)
    on left: 7 8, on right: 6 8 12
expression_list (60)
    on left: 9 10, on right: 10 14 42 52 74 75 90
variable_list_opt (61)
    on left: 11 12, on right: 15
expression_list_opt (62)
    on left: 13 14, on right: 40
argument_list (63)
    on left: 15, on right: 21
type (64)
    on left: 16 17 18, on right: 21
function_definition (65)
    on left: 21, on right: 5
$@1 (66)
    on left: 19, on right: 21
$@2 (67)
    on left: 20, on right: 21
dfs_opt (68)
    on left: 22 23, on right: 21
function_body (69)
    on left: 24, on right: 21
block_statement (70)
    on left: 25, on right: 24
statement_list (71)
    on left: 26 27 28, on right: 25 31 32 33 34 35 36
statement_list_rec (72)
    on left: 29 30, on right: 27 28 29
if_statement (73)
    on left: 31 32, on right: 61
elsif_list (74)
    on left: 33 34 35, on right: 32 34
while_statement (75)
    on left: 36, on right: 60
goto_statement (76)
    on left: 37, on right: 57
label_list (77)
    on left: 38 39, on right: 37 39
function_call (78)
    on left: 40, on right: 41 75
function_call_statement (79)
    on left: 41, on right: 58
return_statement (80)
    on left: 42 43, on right: 59
enforce_statement (81)
    on left: 44, on right: 53
skip_statement (82)
    on left: 45, on right: 55
abortif_statement (83)
    on left: 46, on right: 54
start_thread_statement (84)
    on left: 47, on right: 65
end_thread_statement (85)
    on left: 48, on right: 66
sync_statement (86)
    on left: 49, on right: 67
atomic_begin_statement (87)
    on left: 50, on right: 68
atomic_end_statement (88)
    on left: 51, on right: 69
dead_statement (89)
    on left: 52, on right: 56
statement (90)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69, on right:
    29 30 47 76
decl_statement (91)
    on left: 70, on right: 64
constrain_opt (92)
    on left: 71 72, on right: 74
constrain (93)
    on left: 73, on right: 72
assignment_statement (94)
    on left: 74 75, on right: 63
labeled_statement (95)
    on left: 76, on right: 62
label (96)
    on left: 77, on right: 38 39 76
function_name (97)
    on left: 78, on right: 21 40
variable_name (98)
    on left: 79, on right: 7 8 89
expression (99)
    on left: 80 81 82 83 84 85 86, on right: 9 10 31 32 34 35 36 44
    46 73 81 82 83 84 85 86 87
primary_expression (100)
    on left: 87 88 89 90 91, on right: 92
unary_expression (101)
    on left: 92 93 94 95, on right: 80 93 94 95


state 0

    0 $accept: . start $end

    "decl"  shift, and go to state 1
    "dfs"   shift, and go to state 2

    $default  reduce using rule 22 (dfs_opt)

    start                 go to state 3
    declarations          go to state 4
    declaration           go to state 5
    variable_declaration  go to state 6
    function_definition   go to state 7
    dfs_opt               go to state 8


state 1

    6 variable_declaration: "decl" . variable_list

    IDENTIFIER_Token  shift, and go to state 9

    variable_list  go to state 10
    variable_name  go to state 11


state 2

   23 dfs_opt: "dfs" .

    $default  reduce using rule 23 (dfs_opt)


state 3

    0 $accept: start . $end

    $end  shift, and go to state 12


state 4

    1 start: declarations .
    3 declarations: declarations . declaration

    "decl"  shift, and go to state 1
    "dfs"   shift, and go to state 2

    $end      reduce using rule 1 (start)
    $default  reduce using rule 22 (dfs_opt)

    declaration           go to state 13
    variable_declaration  go to state 6
    function_definition   go to state 7
    dfs_opt               go to state 8


state 5

    2 declarations: declaration .

    $default  reduce using rule 2 (declarations)


state 6

    4 declaration: variable_declaration . ';'

    ';'  shift, and go to state 14


state 7

    5 declaration: function_definition .

    $default  reduce using rule 5 (declaration)


state 8

   21 function_definition: dfs_opt . type function_name $@1 argument_list function_body $@2

    "void"  shift, and go to state 15
    "bool"  shift, and go to state 16

    type  go to state 17


state 9

   79 variable_name: IDENTIFIER_Token .

    $default  reduce using rule 79 (variable_name)


state 10

    6 variable_declaration: "decl" variable_list .
    8 variable_list: variable_list . ',' variable_name

    ','  shift, and go to state 18

    $default  reduce using rule 6 (variable_declaration)


state 11

    7 variable_list: variable_name .

    $default  reduce using rule 7 (variable_list)


state 12

    0 $accept: start $end .

    $default  accept


state 13

    3 declarations: declarations declaration .

    $default  reduce using rule 3 (declarations)


state 14

    4 declaration: variable_declaration ';' .

    $default  reduce using rule 4 (declaration)


state 15

   16 type: "void" .

    $default  reduce using rule 16 (type)


state 16

   17 type: "bool" .
   18     | "bool" . '<' NUMBER_Token '>'

    '<'  shift, and go to state 19

    $default  reduce using rule 17 (type)


state 17

   21 function_definition: dfs_opt type . function_name $@1 argument_list function_body $@2

    IDENTIFIER_Token  shift, and go to state 20

    function_name  go to state 21


state 18

    8 variable_list: variable_list ',' . variable_name

    IDENTIFIER_Token  shift, and go to state 9

    variable_name  go to state 22


state 19

   18 type: "bool" '<' . NUMBER_Token '>'

    NUMBER_Token  shift, and go to state 23


state 20

   78 function_name: IDENTIFIER_Token .

    $default  reduce using rule 78 (function_name)


state 21

   21 function_definition: dfs_opt type function_name . $@1 argument_list function_body $@2

    $default  reduce using rule 19 ($@1)

    $@1  go to state 24


state 22

    8 variable_list: variable_list ',' variable_name .

    $default  reduce using rule 8 (variable_list)


state 23

   18 type: "bool" '<' NUMBER_Token . '>'

    '>'  shift, and go to state 25


state 24

   21 function_definition: dfs_opt type function_name $@1 . argument_list function_body $@2

    '('  shift, and go to state 26

    argument_list  go to state 27


state 25

   18 type: "bool" '<' NUMBER_Token '>' .

    $default  reduce using rule 18 (type)


state 26

   15 argument_list: '(' . variable_list_opt ')'

    IDENTIFIER_Token  shift, and go to state 9

    $default  reduce using rule 11 (variable_list_opt)

    variable_list      go to state 28
    variable_list_opt  go to state 29
    variable_name      go to state 11


state 27

   21 function_definition: dfs_opt type function_name $@1 argument_list . function_body $@2

    "begin"  shift, and go to state 30

    function_body    go to state 31
    block_statement  go to state 32


state 28

    8 variable_list: variable_list . ',' variable_name
   12 variable_list_opt: variable_list .

    ','  shift, and go to state 18

    $default  reduce using rule 12 (variable_list_opt)


state 29

   15 argument_list: '(' variable_list_opt . ')'

    ')'  shift, and go to state 33


state 30

   25 block_statement: "begin" . statement_list "end"

    "decl"            shift, and go to state 1
    "goto"            shift, and go to state 34
    "enforce"         shift, and go to state 35
    "if"              shift, and go to state 36
    "skip"            shift, and go to state 37
    "while"           shift, and go to state 38
    "abortif"         shift, and go to state 39
    "start_thread"    shift, and go to state 40
    "end_thread"      shift, and go to state 41
    "sync"            shift, and go to state 42
    "atomic_begin"    shift, and go to state 43
    "atomic_end"      shift, and go to state 44
    "dead"            shift, and go to state 45
    "return"          shift, and go to state 46
    "schoose"         shift, and go to state 47
    IDENTIFIER_Token  shift, and go to state 48
    NUMBER_Token      shift, and go to state 49
    TICK_Token        shift, and go to state 50
    '('               shift, and go to state 51
    '*'               shift, and go to state 52
    '!'               shift, and go to state 53
    '~'               shift, and go to state 54

    $default  reduce using rule 26 (statement_list)

    variable_declaration     go to state 55
    expression_list          go to state 56
    statement_list           go to state 57
    statement_list_rec       go to state 58
    if_statement             go to state 59
    while_statement          go to state 60
    goto_statement           go to state 61
    function_call            go to state 62
    function_call_statement  go to state 63
    return_statement         go to state 64
    enforce_statement        go to state 65
    skip_statement           go to state 66
    abortif_statement        go to state 67
    start_thread_statement   go to state 68
    end_thread_statement     go to state 69
    sync_statement           go to state 70
    atomic_begin_statement   go to state 71
    atomic_end_statement     go to state 72
    dead_statement           go to state 73
    statement                go to state 74
    decl_statement           go to state 75
    assignment_statement     go to state 76
    labeled_statement        go to state 77
    label                    go to state 78
    function_name            go to state 79
    variable_name            go to state 80
    expression               go to state 81
    primary_expression       go to state 82
    unary_expression         go to state 83


state 31

   21 function_definition: dfs_opt type function_name $@1 argument_list function_body . $@2

    $default  reduce using rule 20 ($@2)

    $@2  go to state 84


state 32

   24 function_body: block_statement .

    $default  reduce using rule 24 (function_body)


state 33

   15 argument_list: '(' variable_list_opt ')' .

    $default  reduce using rule 15 (argument_list)


state 34

   37 goto_statement: "goto" . label_list

    IDENTIFIER_Token  shift, and go to state 85

    label_list  go to state 86
    label       go to state 87


state 35

   44 enforce_statement: "enforce" . expression

    "schoose"         shift, and go to state 47
    IDENTIFIER_Token  shift, and go to state 9
    NUMBER_Token      shift, and go to state 49
    TICK_Token        shift, and go to state 50
    '('               shift, and go to state 51
    '*'               shift, and go to state 52
    '!'               shift, and go to state 53
    '~'               shift, and go to state 54

    variable_name       go to state 80
    expression          go to state 88
    primary_expression  go to state 82
    unary_expression    go to state 83


state 36

   31 if_statement: "if" . expression "then" statement_list "fi"
   32             | "if" . expression "then" statement_list elsif_list "fi"

    "schoose"         shift, and go to state 47
    IDENTIFIER_Token  shift, and go to state 9
    NUMBER_Token      shift, and go to state 49
    TICK_Token        shift, and go to state 50
    '('               shift, and go to state 51
    '*'               shift, and go to state 52
    '!'               shift, and go to state 53
    '~'               shift, and go to state 54

    variable_name       go to state 80
    expression          go to state 89
    primary_expression  go to state 82
    unary_expression    go to state 83


state 37

   45 skip_statement: "skip" .

    $default  reduce using rule 45 (skip_statement)


state 38

   36 while_statement: "while" . expression "do" statement_list "od"

    "schoose"         shift, and go to state 47
    IDENTIFIER_Token  shift, and go to state 9
    NUMBER_Token      shift, and go to state 49
    TICK_Token        shift, and go to state 50
    '('               shift, and go to state 51
    '*'               shift, and go to state 52
    '!'               shift, and go to state 53
    '~'               shift, and go to state 54

    variable_name       go to state 80
    expression          go to state 90
    primary_expression  go to state 82
    unary_expression    go to state 83


state 39

   46 abortif_statement: "abortif" . expression

    "schoose"         shift, and go to state 47
    IDENTIFIER_Token  shift, and go to state 9
    NUMBER_Token      shift, and go to state 49
    TICK_Token        shift, and go to state 50
    '('               shift, and go to state 51
    '*'               shift, and go to state 52
    '!'               shift, and go to state 53
    '~'               shift, and go to state 54

    variable_name       go to state 80
    expression          go to state 91
    primary_expression  go to state 82
    unary_expression    go to state 83


state 40

   47 start_thread_statement: "start_thread" . statement

    "decl"            shift, and go to state 1
    "goto"            shift, and go to state 34
    "enforce"         shift, and go to state 35
    "if"              shift, and go to state 36
    "skip"            shift, and go to state 37
    "while"           shift, and go to state 38
    "abortif"         shift, and go to state 39
    "start_thread"    shift, and go to state 40
    "end_thread"      shift, and go to state 41
    "sync"            shift, and go to state 42
    "atomic_begin"    shift, and go to state 43
    "atomic_end"      shift, and go to state 44
    "dead"            shift, and go to state 45
    "return"          shift, and go to state 46
    "schoose"         shift, and go to state 47
    IDENTIFIER_Token  shift, and go to state 48
    NUMBER_Token      shift, and go to state 49
    TICK_Token        shift, and go to state 50
    '('               shift, and go to state 51
    '*'               shift, and go to state 52
    '!'               shift, and go to state 53
    '~'               shift, and go to state 54

    variable_declaration     go to state 55
    expression_list          go to state 56
    if_statement             go to state 59
    while_statement          go to state 60
    goto_statement           go to state 61
    function_call            go to state 62
    function_call_statement  go to state 63
    return_statement         go to state 64
    enforce_statement        go to state 65
    skip_statement           go to state 66
    abortif_statement        go to state 67
    start_thread_statement   go to state 68
    end_thread_statement     go to state 69
    sync_statement           go to state 70
    atomic_begin_statement   go to state 71
    atomic_end_statement     go to state 72
    dead_statement           go to state 73
    statement                go to state 92
    decl_statement           go to state 75
    assignment_statement     go to state 76
    labeled_statement        go to state 77
    label                    go to state 78
    function_name            go to state 79
    variable_name            go to state 80
    expression               go to state 81
    primary_expression       go to state 82
    unary_expression         go to state 83


state 41

   48 end_thread_statement: "end_thread" .

    $default  reduce using rule 48 (end_thread_statement)


state 42

   49 sync_statement: "sync" . IDENTIFIER_Token

    IDENTIFIER_Token  shift, and go to state 93


state 43

   50 atomic_begin_statement: "atomic_begin" .

    $default  reduce using rule 50 (atomic_begin_statement)


state 44

   51 atomic_end_statement: "atomic_end" .

    $default  reduce using rule 51 (atomic_end_statement)


state 45

   52 dead_statement: "dead" . expression_list

    "schoose"         shift, and go to state 47
    IDENTIFIER_Token  shift, and go to state 9
    NUMBER_Token      shift, and go to state 49
    TICK_Token        shift, and go to state 50
    '('               shift, and go to state 51
    '*'               shift, and go to state 52
    '!'               shift, and go to state 53
    '~'               shift, and go to state 54

    expression_list     go to state 94
    variable_name       go to state 80
    expression          go to state 81
    primary_expression  go to state 82
    unary_expression    go to state 83


state 46

   42 return_statement: "return" . expression_list
   43                 | "return" .

    "schoose"         shift, and go to state 47
    IDENTIFIER_Token  shift, and go to state 9
    NUMBER_Token      shift, and go to state 49
    TICK_Token        shift, and go to state 50
    '('               shift, and go to state 51
    '*'               shift, and go to state 52
    '!'               shift, and go to state 53
    '~'               shift, and go to state 54

    $default  reduce using rule 43 (return_statement)

    expression_list     go to state 95
    variable_name       go to state 80
    expression          go to state 81
    primary_expression  go to state 82
    unary_expression    go to state 83


state 47

   90 primary_expression: "schoose" . '[' expression_list ']'

    '['  shift, and go to state 96


state 48

   77 label: IDENTIFIER_Token .
   78 function_name: IDENTIFIER_Token .
   79 variable_name: IDENTIFIER_Token .

    '('       reduce using rule 78 (function_name)
    ':'       reduce using rule 77 (label)
    $default  reduce using rule 79 (variable_name)


state 49

   91 primary_expression: NUMBER_Token .

    $default  reduce using rule 91 (primary_expression)


state 50

   95 unary_expression: TICK_Token . unary_expression

    "schoose"         shift, and go to state 47
    IDENTIFIER_Token  shift, and go to state 9
    NUMBER_Token      shift, and go to state 49
    TICK_Token        shift, and go to state 50
    '('               shift, and go to state 51
    '*'               shift, and go to state 52
    '!'               shift, and go to state 53
    '~'               shift, and go to state 54

    variable_name       go to state 80
    primary_expression  go to state 82
    unary_expression    go to state 97


state 51

   87 primary_expression: '(' . expression ')'

    "schoose"         shift, and go to state 47
    IDENTIFIER_Token  shift, and go to state 9
    NUMBER_Token      shift, and go to state 49
    TICK_Token        shift, and go to state 50
    '('               shift, and go to state 51
    '*'               shift, and go to state 52
    '!'               shift, and go to state 53
    '~'               shift, and go to state 54

    variable_name       go to state 80
    expression          go to state 98
    primary_expression  go to state 82
    unary_expression    go to state 83


state 52

   88 primary_expression: '*' .

    $default  reduce using rule 88 (primary_expression)


state 53

   93 unary_expression: '!' . unary_expression

    "schoose"         shift, and go to state 47
    IDENTIFIER_Token  shift, and go to state 9
    NUMBER_Token      shift, and go to state 49
    TICK_Token        shift, and go to state 50
    '('               shift, and go to state 51
    '*'               shift, and go to state 52
    '!'               shift, and go to state 53
    '~'               shift, and go to state 54

    variable_name       go to state 80
    primary_expression  go to state 82
    unary_expression    go to state 99


state 54

   94 unary_expression: '~' . unary_expression

    "schoose"         shift, and go to state 47
    IDENTIFIER_Token  shift, and go to state 9
    NUMBER_Token      shift, and go to state 49
    TICK_Token        shift, and go to state 50
    '('               shift, and go to state 51
    '*'               shift, and go to state 52
    '!'               shift, and go to state 53
    '~'               shift, and go to state 54

    variable_name       go to state 80
    primary_expression  go to state 82
    unary_expression    go to state 100


state 55
